# summariser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: bot.sqlite3  bot.sqlite3-shm  bot.sqlite3-wal
deploy/: bootstrap-vps.sh  tg-digest-bot.service.example
src/tg_digest_bot/: __main__.py  autostart.py  config.py  db.py  filtered_day.py  main.py  middlewares.py  mini_stats.py  poe2scout_client.py  telegram_chunks.py  telegram_llm_html.py  timeutil.py
src/tg_digest_bot/handlers/: __init__.py  digest.py  messages.py
src/tg_digest_bot/llm/: __init__.py  zai.py
