[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-digest-bot"
version = "0.1.0"
description = "Telegram group digest bot with SQLite and Z.AI GLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic-settings>=2.4",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
